adding_API_with_details_section

--- a/css/style.css
+++ b/css/style.css
@@ -112,3 +112,43 @@ body
     filter: grayscale(0%);
     
 }
+
+.display
+{
+    height: 100vh;
+    background-color: #27282B;
+}
+
+
+.display img
+{
+    width: 100%;
+    
+}
+
+.fs-p
+{
+    font-size: 14px;
+    color: white;
+}
+
+span
+{
+    font-weight: bold;
+    color: black;
+    background-color: #0DCAF0;
+    border-radius: 5px;
+    padding: 5px;
+    padding-block: 2px;
+    font-size: 12px;
+}
+
+.display .btn-close
+{
+    position: absolute;
+    top: 30px;
+    right: 120px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+}
