--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body
 {
     background-color: #3A497B;
     position: sticky !important;
+    top: 24px;
     width: 75%;
     margin: auto;
     border-radius: 20px;
@@ -24,6 +25,7 @@ body
     padding-block: 12px;
     box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.5) ;
     margin-bottom: 30px;
+    z-index: 1000;
     
 }
 .navbar a
@@ -132,7 +134,7 @@ body
     color: white;
 }
 
-span
+.rd span
 {
     font-weight: bold;
     color: black;
@@ -151,4 +153,20 @@ span
     color: white;
     font-size: 16px;
     cursor: pointer;
+}
+
+@media all and (max-width: 576px)
+{
+    .display .btn-close
+    {
+        right: 40px;
+    }
+    
+}
+@media all and (min-width: 576px) and (max-width: 768px  )
+{
+    .display .btn-close
+    {
+        right: 40px;
+    }
 }
