--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,53 @@ body
     cursor: pointer;
 }
 
+.loader {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    display: inline-block;
+    border-top: 4px solid #FFF;
+    border-right: 4px solid transparent;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+  }
+  .loader::after {
+    content: '';  
+    box-sizing: border-box;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border-left: 4px solid #FF3D00;
+    border-bottom: 4px solid transparent;
+    animation: rotation 0.5s linear infinite reverse;
+  }
+  @keyframes rotation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  } 
+
+.spinner
+{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 2000;
+    background: linear-gradient(
+        to top, 
+        rgba(39, 43, 48,0.8),  /* Start with black at 10% opacity */
+        rgba(39, 43, 48,0.5)   /* End with black at 10% opacity */
+    );
+}
+
 @media all and (max-width: 576px)
 {
     .display .btn-close
@@ -170,3 +217,4 @@ body
         right: 40px;
     }
 }
+
