--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body
 {
     background-color: #272B30;
-    font-family: "Comfortaa", cursive;
+    font-family: 'Comfortaa', cursive;
 }
 
 .background
